gl33-master/src/test/deca/syntax/invalid/others/parentheseEnPlusPrintMethode1.deca
/*
Test sur l'ajout de plusieurs parenthèses à la fin de print dans une fonction

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/invalid/others/expected

*/

class MyClass{
    int myFunc(){
      print("Hello"));
      return 1;
    }
}

{

}
